# Frida-CLI

./: .gitignore  Online Bookstore.csv  README.md  data.json  data2.json  envs  installation.md  main.py  output.csv  pyproject.toml  requirements.txt  test2.cs
docs/: inchat_commands.md  poetry_project.md
fridacli/: common.py  config.py  logger.py  main.py
fridacli/chatbot/: README.md  __init__.py  chatbot.py  predefined_phrases.py
fridacli/chatfiles/: file_manager.py  graph.py  path_utilities.py
fridacli/commands/: README.md  chat.py  chat_subcommands.py  config.py  predefined_phrases.py
fridacli/commands/recipes/: __init__.py  angular_voyager.py  asp_voyager.py  document_recipe.py  documentation.py  epics_generator.py  migration_recipe.py  predefined_phrases.py  regex_configuration.py  utils.py
fridacli/commands/recipes/utilities/: graph.py
fridacli/commands/subcommands/: README.md  basic_cli.py  callbacks.py  files_cli.py  files_commands.py  path_utilities.py  predefined_phrases.py  recipes_cli.py  subcommands_info.py
fridacli/config/: README.md  env_vars.py
fridacli/file_manager/: __init__.py  file.py  graph.py
fridacli/fridaCoder/: exceptionMessage.py  frida_coder.py
fridacli/fridaCoder/languages/: languague.py  python.py
fridacli/frida_coder/: __init__.py
fridacli/frida_coder/languague/: __init__.py  csharp.py  java.py  python.py  visualbasic.py
fridacli/gui/: chat_view.py  code_view.py  configuration_view.py  create_epic_example_view.py  filtered_directory_tree.py  first_time_config_view.py  fridacli.py  push_screens.py
fridacli/gui/chat_responses/: code_change_question.py  custom_labels.py  system_response.py
fridacli/gui/epics_generator/: epic.py  epics_generation.py  example.json  project.py  push_screens.py  user_story.py  utils.py
fridacli/gui/tcss/: frida_styles.tcss
fridacli/interface/: Console.py  README.md  bot_console.py  console.py  spinner.py  styles.py  system_console.py  theme.py  user_console.py
fridacli/logger/: __init__.py
fridacli/predefined_phrases/: bot_messages.py  chat_command.py  config_command.py  interface.py
fridacli/prompts/: README.md  actions.py  system.py
fridacli/prompts_provider/: chatbot_prompts.py  firebase_provider.py
src/: main.py
src/chatbot/: README.md  predefined_phrases.py
src/chatfiles/: README.md
src/commands/: chat.py
src/config/: env_vars.py
src/interface/: Console.py  styles.py  theme.py
