[tool.poetry]
name = "fridacli"
version = "0.1.0"
description = "AI cli assistant for peer programming developed by Softtek innovation team."
authors = ["Alejandro Ubeto <142447560+alexUbeto@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "fridacli" },
    { include = "chatbot", from = "fridacli" },
    { include = "chatfiles", from = "fridacli" },
    { include = "commands", from = "fridacli" },
    { include = "config", from = "fridacli" },
    { include = "interface", from = "fridacli" },
    { include = "prompts", from = "fridacli" },
]

[tool.poetry.scripts]
frida = "fridacli.main:frida_cli"

[tool.poetry.dependencies]
python = "^3.10"
innovation-stk = { git = "https://github.com/Fridaplatform/SofttekLLMSDK.git", rev = "1542f95f7b08d85d59d1669983e56ad05d3dddd9" }
typer = { extras = ["all"], version = "^0.9.0" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
