[tool.poetry]
name = "fridacli"
version = "0.2.0"
description = "AI cli assistant for peer programming developed by Softtek innovation team."
authors = [
    "Alejandro Ubeto <alejandro.ubeto@softtek.com>",
    "Onder Campos <onder.campos@softtek.com>",
]
maintainers = ["Onder Campos <onder.campos@softtek.com>"]
readme = "README.md"
repository = "https://github.com/Fridaplatform/Frida-CLI"
keywords = [
    "cli",
    "command-line",
    "peer programming",
    "ai",
    "aiassistant",
    "documentation",
    "softtek",
]
packages = [{ include = "fridacli" }]

[tool.poetry.scripts]
frida = "fridacli.main:frida_cli"

[tool.poetry.dependencies]
python = "^3.10"
innovation-stk = { git = "https://github.com/Fridaplatform/SofttekLLMSDK.git", rev = "1542f95f7b08d85d59d1669983e56ad05d3dddd9" }
typer = { extras = ["all"], version = "^0.9.0" }
inquirerpy = "^0.3.4"
textdistance = "^4.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
